--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^5.0.1",
     "reactstrap": "^8.0.1",
     "redux": "^4.0.4",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "sentence-case": "^2.1.1",
     "styled-components": "^4.3.2"
