--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "json-client": "^0.9.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-lottie": "^1.2.3",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "reactstrap": "^8.0.1",
